test/conformance/kuttl/generate/clusterpolicy/standard/clone/nosync/cpol-foreach-clone-nosync/02-resource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- create-pod.yaml
assert:
- cloned-secret.yaml
