test/conformance/kuttl/generate/clusterpolicy/standard/clone/nosync/cpol-foreach-clone-nosync/99-cleanup.yaml
# This clean-up stage is necessary because of https://github.com/kyverno/kyverno/issues/5101
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |
      kubectl delete ur -A --all
      kubectl delete -f generated-secret.yaml --ignore-not-found=true
