test/conformance/kuttl/generate/clusterpolicy/standard/clone/nosync/cpol-foreach-clone-nosync/manifest.yaml
apiVersion: v1
data:
  foo: YmFy
metadata:
  name: regcred
  namespace: default
kind: Secret
type: Opaque
---
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: cpol-foreach-clone-nosync
  namespace: default
spec:
  rules:
  - name: cpol-foreach-clone-nosync-secret
    match:
      any:
      - resources:
          kinds:
          - pod
    generate:
      foreach:
      - list: "request.object.spec.containers"
        generateResources:
        - kind: Secret
          apiVersion: v1
          name: "newsecret"
          namespace: "default"
          synchronize: false
          clone:
            namespace: default
            name: regcred
